text wrap bug fixed

--- a/src/Components/ListsMenu/ListsMenu.css
+++ b/src/Components/ListsMenu/ListsMenu.css
@@ -18,8 +18,9 @@
 }
 
 .list-menu__item {
-  height: 30px;
+  min-height: 30px;
   display: block;
+  padding: 0.5rem;
 }
 
 .list-menu__item input {
